fix: Footer overlapping articles menu

--- a/app/styles/article.less
+++ b/app/styles/article.less
@@ -24,6 +24,8 @@
 }
 
 .articles-menu {
+  padding-bottom: 6em;
+
   &__item {
     cursor: pointer;
   }
